fix: small bug in professions widget

--- a/webapp/front/front/src/assets/i18n/en.json
+++ b/webapp/front/front/src/assets/i18n/en.json
@@ -1,6 +1,4 @@
 {
-  "GREETING": "Hello",
-  "WELCOME_MESSAGE": "Welcome to our application!",
   "ADMIN": {},
   "ADMIN-AMENITIES-PAGE": {
     "AMENITIES": "Amenities",
@@ -15,7 +13,7 @@
     "FRI": "Fri",
     "SAT": "Sat",
     "SUN": "Sun",
-    "DELETE_AMENITY_AMENITYNAME": "Delete Amenity '{{amenityName}}'",
+    "DELETE_AMENITY_AMENITYNAME": "Delete Amenity '{{formValue}}'",
     "ARE_YOU_SURE_YOU_WANT_TO_DELETE_THIS_AMENITY": "Are you sure you want to delete this amenity?",
     "DELETE": "Delete",
     "CANCEL": "Cancel",
@@ -90,10 +88,6 @@
     "_TAGNAME_": "{{ tag.name }}",
     "AT_LEAST_ONE_TAG_MUST_BE_SELECTED": "*At least one tag must be selected.",
     "POST": "Post",
-    "ANGULARCORE": "@angular/core",
-    "ANGULARFORMS": "@angular/forms",
-    "COREINDEX": "@core/index",
-    "SHAREDINDEX": "@shared/index",
     "RXJS": "rxjs",
     "APPADMINCREATEANNOUNCEMENTPAGE": "app-admin-create-announcement-page",
     "ADMINCREATEANNOUNCEMENTPAGECOMPONENTHTML": "./admin-create-announcement-page.component.html",
@@ -154,10 +148,6 @@
     "END_TIME": "End Time",
     "START_TIME_MUST_BE_EARLIER_THAN_END_TIME": "Start Time must be earlier than End Time",
     "CREATE": "Create",
-    "ANGULARCORE": "@angular/core",
-    "ANGULARFORMS": "@angular/forms",
-    "COREINDEX": "@core/index",
-    "SHAREDINDEX": "@shared/index",
     "APPADMINCREATEEVENT": "app-admin-create-event",
     "ADMINCREATEEVENTCOMPONENTHTML": "./admin-create-event.component.html",
     "STARTTIME": "startTime",
@@ -196,12 +186,6 @@
     "DESCRIPTION_IS_REQUIRED": "Description is required",
     "OR": "Or",
     "DROP_FILES": "Drop files",
-    "ANGULARCORE": "@angular/core",
-    "ANGULARROUTER": "@angular/router",
-    "ANGULARFORMS": "@angular/forms",
-    "COREINDEX": "@core/index",
-    "SHAREDINDEX": "@shared/index",
-    "RXJS": "rxjs",
     "APPADMININFORMATIONPAGE": "app-admin-information-page",
     "ADMININFORMATIONPAGECOMPONENTHTML": "./admin-information-page.component.html",
     "CONTACTSPAGE": "contactsPage",
@@ -240,8 +224,6 @@
     "FAILED_TO_DELETE_RESOURCE": "Failed to delete resource."
   },
   "ADMIN-LAYOUT": {
-    "ANGULARCORE": "@angular/core",
-    "SHAREDSHAREDMODULE": "@shared/shared.module",
     "APPADMINLAYOUT": "app-admin-layout",
     "ADMINLAYOUTCOMPONENTHTML": "./admin-layout.component.html"
   },
@@ -258,10 +240,6 @@
     "_USERIDENTIFICATION_": "{{ user.identification }}",
     "_NEIGHBORS__REMOVE__REJECT_": "{{ neighbors ? \"Remove\" : \"Reject\" }}",
     "ACCEPT": "Accept",
-    "ANGULARCORE": "@angular/core",
-    "ANGULARROUTER": "@angular/router",
-    "COREINDEX": "@core/index",
-    "SHAREDINDEX": "@shared/index",
     "APPADMINNEIGHBORSREQUESTSPAGE": "app-admin-neighbors-requests-page",
     "ADMINNEIGHBORSREQUESTSPAGECOMPONENTHTML": "./admin-neighbors-requests-page.component.html",
     "PAGE": "page",
@@ -287,8 +265,6 @@
     "MERGE": "merge"
   },
   "ADMIN-ROUTING.MODULE.TS": {
-    "ANGULARROUTER": "@angular/router",
-    "ANGULARCORE": "@angular/core",
     "ADMINCREATEANNOUNCEMENTPAGEADMINCREATEANNOUNCEMENT": "./admin-create-announcement-page/admin-create-announcement-page.component",
     "ADMINLAYOUTADMINLAYOUTCOMPONENT": "./admin-layout/admin-layout.component",
     "ADMINNEIGHBORSREQUESTSPAGEADMINNEIGHBORSREQUESTSPA": "./admin-neighbors-requests-page/admin-neighbors-requests-page.component",
@@ -328,10 +304,6 @@
     "_WORKERBUSINESSNAME_": "{{ worker.businessName }}",
     "_SERVICEPROVIDERS__REMOVE__REJECT_": "{{ serviceProviders ? \"Remove\" : \"Reject\" }}",
     "ACCEPT": "Accept",
-    "ANGULARCORE": "@angular/core",
-    "ANGULARROUTER": "@angular/router",
-    "COREINDEX": "@core/index",
-    "SHAREDINDEX": "@shared/index",
     "APPADMINSERVICEPROVIDERSREQUESTSPAGE": "app-admin-service-providers-requests-page",
     "ADMINSERVICEPROVIDERSREQUESTSPAGECOMPONENTHTML": "./admin-service-providers-requests-page.component.html",
     "PAGE": "page",
@@ -368,18 +340,12 @@
     "AMENITIES": "Amenities",
     "INFORMATION": "Information",
     "CREATE_EVENT": "Create Event",
-    "ANGULARCORE": "@angular/core",
-    "ANGULARROUTER": "@angular/router",
     "APPADMINSIDEBAR": "app-admin-sidebar",
     "ADMINSIDEBARCOMPONENTHTML": "./admin-sidebar.component.html"
   },
   "ADMIN.MODULE.TS": {
-    "ANGULARCORE": "@angular/core",
-    "ANGULARCOMMON": "@angular/common",
-    "SHAREDINDEX": "@shared/index",
     "ADMINROUTINGMODULE": "./admin-routing.module",
     "ADMINCREATEANNOUNCEMENTPAGEADMINCREATEANNOUNCEMENT": "./admin-create-announcement-page/admin-create-announcement-page.component",
-    "FEATURESINDEX": "@features/index",
     "ADMINLAYOUTADMINLAYOUTCOMPONENT": "./admin-layout/admin-layout.component",
     "ADMINSIDEBARADMINSIDEBARCOMPONENT": "./admin-sidebar/admin-sidebar.component",
     "ADMINNEIGHBORSREQUESTSPAGEADMINNEIGHBORSREQUESTSPA": "./admin-neighbors-requests-page/admin-neighbors-requests-page.component",
@@ -411,12 +377,6 @@
     "HAS_BEEN_SUCCESSFULLY_RESERVED_FOR_YOU": "has been successfully reserved for\n        you!",
     "SHIFTS": "Shift(s):",
     "GO_TO_AMENITIES": "Go to Amenities",
-    "ANGULARCORE": "@angular/core",
-    "ANGULARFORMS": "@angular/forms",
-    "ANGULARROUTER": "@angular/router",
-    "ANGULARCOMMON": "@angular/common",
-    "COREINDEX": "@core/index",
-    "SHAREDINDEX": "@shared/index",
     "RXJS": "rxjs",
     "APPAMENITIESCHOOSETIMEPAGE": "app-amenities-choose-time-page",
     "AMENITIESCHOOSETIMEPAGECOMPONENTHTML": "./amenities-choose-time-page.component.html",
@@ -441,10 +401,6 @@
     "END_TIME": "End Time",
     "_RESERVATIONSHIFTENDTIME_": "{{ reservation.shift?.endTime }}",
     "PAGE__CURRENTPAGE__OF__TOTALPAGES_": "Page {{ currentPage }} of {{ totalPages }}",
-    "ANGULARCORE": "@angular/core",
-    "SHAREDINDEX": "@shared/index",
-    "COREINDEX": "@core/index",
-    "ANGULARROUTER": "@angular/router",
     "APPAMENITIESRESERVATIONSLIST": "app-amenities-reservations-list",
     "AMENITIESRESERVATIONSLISTCOMPONENTHTML": "./amenities-reservations-list.component.html",
     "RESERVATIONSPAGE": "reservationsPage",
@@ -472,14 +428,6 @@
     "AMENITY_HOURS": "Amenity Hours",
     "_GETABBREVIATEDDAYD_": "{{ getAbbreviatedDay(d) }}",
     "_FORMATTIMET_": "{{ formatTime(t) }}",
-    "ANGULARCORE": "@angular/core",
-    "ANGULARFORMS": "@angular/forms",
-    "COREINDEX": "@core/index",
-    "SHAREDINDEX": "@shared/index",
-    "ANGULARROUTER": "@angular/router",
-    "RXJS": "rxjs",
-    "APPAMENITIESRESERVATIONSPAGE": "app-amenities-reservations-page",
-    "AMENITIESRESERVATIONSPAGECOMPONENTHTML": "./amenities-reservations-page.component.html",
     "PAGE": "page",
     "SIZE": "size",
     "MERGE": "merge",
@@ -500,30 +448,18 @@
     "SUNDAY": "Sunday"
   },
   "AMENITIES-ROUTING.MODULE.TS": {
-    "ANGULARCORE": "@angular/core",
-    "ANGULARROUTER": "@angular/router",
-    "FEATURESINDEX": "@features/index",
     "CHOOSETIME": "choose-time"
   },
   "AMENITIES.MODULE.TS": {
-    "ANGULARCORE": "@angular/core",
-    "ANGULARCOMMON": "@angular/common",
-    "FEATURESINDEX": "@features/index",
-    "SHAREDSHAREDMODULE": "@shared/shared.module",
     "AMENITIESROUTINGMODULE": "./amenities-routing.module"
   },
   "AUTH-ROUTING.MODULE.TS": {
-    "ANGULARROUTER": "@angular/router",
-    "ANGULARCORE": "@angular/core",
     "LOGINPAGELOGINPAGECOMPONENT": "./login-page/login-page.component"
   },
   "AUTH.MODULE.TS": {
-    "ANGULARCORE": "@angular/core",
-    "ANGULARCOMMON": "@angular/common",
     "LOGINDIALOGLOGINDIALOGCOMPONENT": "./login-dialog/login-dialog.component",
     "LOGINPAGELOGINPAGECOMPONENT": "./login-page/login-page.component",
     "SIGNUPDIALOGSIGNUPDIALOGCOMPONENT": "./signup-dialog/signup-dialog.component",
-    "SHAREDINDEX": "@shared/index",
     "AUTHROUTINGMODULE": "./auth-routing.module"
   },
   "LOGIN-DIALOG": {
@@ -536,11 +472,6 @@
     "LOGIN": "Login",
     "NOT_A_MEMBER_YET": "Not a member yet?",
     "SIGN_UP_NOW": "Sign up now",
-    "ANGULARCORE": "@angular/core",
-    "ANGULARFORMS": "@angular/forms",
-    "ANGULARROUTER": "@angular/router",
-    "COREINDEX": "@core/index",
-    "SHAREDINDEX": "@shared/index",
     "APPLOGINDIALOG": "app-login-dialog",
     "LOGINDIALOGCOMPONENTHTML": "./login-dialog.component.html",
     "SERVICES": "services",
