fix pom dependency and translate html

--- a/webapp/front/front/src/assets/i18n/en.json
+++ b/webapp/front/front/src/assets/i18n/en.json
@@ -118,7 +118,7 @@
     "TEMPORARY": "Temporary",
     "SUBJECT": "subject",
     "MESSAGE": "message",
-    "YOUVE_ALREADY_SELECTED_THE_TAG_TAGNAME": "You've already selected the tag '${tag.name}'",
+    "YOUVE_ALREADY_SELECTED_THE_TAG_TAGNAME": "You've already selected the tag '{{tagName}}'",
     "WARNING": "warning",
     "TAGS": "tags",
     "SELF": "self",
@@ -134,7 +134,8 @@
     "SUCCESS": "success",
     "ERROR_CREATING_ANNOUNCEMENT": "Error creating announcement:",
     "ERROR_CREATING_ANNOUNCEMENT_PLEASE_TRY_AGAIN": "Error creating announcement. Please try again.",
-    "ERROR_UPLOADING_IMAGE": "Error uploading image:"
+    "ERROR_UPLOADING_IMAGE": "Error uploading image:",
+    "ERROR_UPLOADING_IMAGE_2": "Error uploading image"
   },
   "ADMIN-CREATE-EVENT": {
     "CREATE_NEW_EVENT": "Create New Event",
@@ -229,6 +230,8 @@
   },
   "ADMIN-NEIGHBORS-REQUESTS-PAGE": {
     "_NEIGHBORS__PENDING_NEIGHBOR_REQUESTS__CURRENT_NEI": "{{ !neighbors ? \"Pending Neighbor Requests\" : \"Current Neighbors\" }}",
+    "PENDING_NEIGHBOR_REQUESTS": "Pending Neighbor Requests",
+    "CURRENT_NEIGHBORS": "Current Neighbors",
     "NO_NEW_REQUESTS_FOUND": "No new requests found.",
     "NAME": "Name:",
     "_USERNAME_": "{{ user.name }}",
@@ -239,6 +242,8 @@
     "IDENTIFICATION": "Identification:",
     "_USERIDENTIFICATION_": "{{ user.identification }}",
     "_NEIGHBORS__REMOVE__REJECT_": "{{ neighbors ? \"Remove\" : \"Reject\" }}",
+    "REMOVE": "Remove",
+    "REJECT": "Reject",
     "ACCEPT": "Accept",
     "APPADMINNEIGHBORSREQUESTSPAGE": "app-admin-neighbors-requests-page",
     "ADMINNEIGHBORSREQUESTSPAGECOMPONENTHTML": "./admin-neighbors-requests-page.component.html",
@@ -248,20 +253,20 @@
     "NEIGHBORS": "neighbors",
     "ERROR_LOADING_USERS": "Error loading users:",
     "REMOVE_NEIGHBOR": "Remove Neighbor",
-    "ARE_YOU_SURE_YOU_WANT_TO_REMOVE_USERNAME_AS_A_NEIG": "Are you sure you want to remove \"${user.name}\" as a neighbor? This action cannot be undone, and the user will lose access to neighborhood features.",
+    "ARE_YOU_SURE_YOU_WANT_TO_REMOVE_USERNAME_AS_A_NEIG": "Are you sure you want to remove {{userName}} as a neighbor? This action cannot be undone, and the user will lose access to neighborhood features.",
     "YES_REMOVE": "Yes, Remove",
-    "USERNAME_HAS_BEEN_SUCCESSFULLY_REMOVED_AS_A_NEIGHB": "\"${user.name}\" has been successfully removed as a neighbor. They no longer have access to neighborhood features.",
-    "WE_ENCOUNTERED_AN_ISSUE_WHILE_TRYING_TO_REMOVE_USE": "We encountered an issue while trying to remove \"${user.name}\" as a neighbor. Please check your connection or try again later.",
+    "USERNAME_HAS_BEEN_SUCCESSFULLY_REMOVED_AS_A_NEIGHB": "{{userName}} has been successfully removed as a neighbor. They no longer have access to neighborhood features.",
+    "WE_ENCOUNTERED_AN_ISSUE_WHILE_TRYING_TO_REMOVE_USE": "We encountered an issue while trying to remove {{userName}} as a neighbor. Please check your connection or try again later.",
     "REJECT_USER_REQUEST": "Reject User Request",
-    "ARE_YOU_SURE_YOU_WANT_TO_DECLINE_THE_REQUEST_FROM_": "Are you sure you want to decline the request from \"${user.name}\"? This action cannot be undone.",
+    "ARE_YOU_SURE_YOU_WANT_TO_DECLINE_THE_REQUEST_FROM_": "Are you sure you want to decline the request from {{userName}}? This action cannot be undone.",
     "YES_REJECT": "Yes, Reject",
-    "THE_REQUEST_FROM_USERNAME_HAS_BEEN_SUCCESSFULLY_DE": "The request from \"${user.name}\" has been successfully declined. The user will be notified accordingly.",
-    "WE_ENCOUNTERED_AN_ISSUE_WHILE_TRYING_TO_DECLINE_TH": "We encountered an issue while trying to decline the request from \"${user.name}\". Please check your connection or try again later.",
+    "THE_REQUEST_FROM_USERNAME_HAS_BEEN_SUCCESSFULLY_DE": "The request from {{userName}} has been successfully declined. The user will be notified accordingly.",
+    "WE_ENCOUNTERED_AN_ISSUE_WHILE_TRYING_TO_DECLINE_TH": "We encountered an issue while trying to decline the request from {{userName}}. Please check your connection or try again later.",
     "CANCEL": "Cancel",
     "SUCCESS": "success",
     "ERROR": "error",
-    "USER_USERNAME_HAS_BEEN_SUCCESSFULLY_VERIFIED_AS_A_": "User \"${user.name}\" has been successfully verified as a neighbor.",
-    "VERIFICATION_FOR_USER_USERNAME_FAILED_PLEASE_TRY_A": "Verification for user \"${user.name}\" failed. Please try again later.",
+    "USER_USERNAME_HAS_BEEN_SUCCESSFULLY_VERIFIED_AS_A_": "User {{userName}} has been successfully verified as a neighbor.",
+    "VERIFICATION_FOR_USER_USERNAME_FAILED_PLEASE_TRY_A": "Verification for user {{userName}} failed. Please try again later.",
     "MERGE": "merge"
   },
   "ADMIN-ROUTING.MODULE.TS": {
@@ -289,6 +294,8 @@
   },
   "ADMIN-SERVICE-PROVIDERS-REQUESTS-PAGE": {
     "_SERVICEPROVIDERS__PENDING_REQUESTS__CURRENT_SERVI": "{{ !serviceProviders ? \"Pending Requests\" : \"Current Service Providers\" }}",
+    "PENDING_REQUESTS": "Pending Requests",
+    "CURRENT_SERVICE_PROVIDERS": "Current Service Providers",
     "NO_NEW_REQUESTS": "No new requests.",
     "NAME": "Name:",
     "_WORKERUSERNAME_": "{{ worker.user.name }}",
@@ -312,22 +319,24 @@
     "SERVICEPROVIDERS": "service-providers",
     "ERROR_LOADING_WORKERS": "Error loading workers:",
     "REMOVE_SERVICE_PROVIDER": "Remove Service Provider",
-    "ARE_YOU_SURE_YOU_WANT_TO_REMOVE_WORKERUSERNAME_AS_": "Are you sure you want to remove \"${worker.user.name}\" as a service provider? This action cannot be undone.",
+    "ARE_YOU_SURE_YOU_WANT_TO_REMOVE_WORKERUSERNAME_AS_": "Are you sure you want to remove {{workerName}} as a service provider? This action cannot be undone.",
     "YES_REMOVE": "Yes, Remove",
-    "WORKERUSERNAME_HAS_BEEN_SUCCESSFULLY_REMOVED_AS_A_": "\"${worker.user.name}\" has been successfully removed as a service provider.",
-    "WE_ENCOUNTERED_AN_ISSUE_WHILE_TRYING_TO_REMOVE_WOR": "We encountered an issue while trying to remove \"${worker.user.name}\" as a service provider. Please check your connection or try again later.",
+    "WORKERUSERNAME_HAS_BEEN_SUCCESSFULLY_REMOVED_AS_A_": "{{workerName}} has been successfully removed as a service provider.",
+    "WE_ENCOUNTERED_AN_ISSUE_WHILE_TRYING_TO_REMOVE_WOR": "We encountered an issue while trying to remove {{workerName}} as a service provider. Please check your connection or try again later.",
     "REJECT_SERVICE_PROVIDER_REQUEST": "Reject Service Provider Request",
-    "ARE_YOU_SURE_YOU_WANT_TO_DECLINE_THE_REQUEST_FROM_": "Are you sure you want to decline the request from \"${worker.user.name}\"? This action cannot be undone.",
+    "ARE_YOU_SURE_YOU_WANT_TO_DECLINE_THE_REQUEST_FROM_": "Are you sure you want to decline the request from {{workerName}}? This action cannot be undone.",
     "YES_REJECT": "Yes, Reject",
-    "THE_REQUEST_FROM_WORKERUSERNAME_HAS_BEEN_SUCCESSFU": "The request from \"${worker.user.name}\" has been successfully declined.",
-    "WE_ENCOUNTERED_AN_ISSUE_WHILE_TRYING_TO_DECLINE_TH": "We encountered an issue while trying to decline the request from \"${worker.user.name}\". Please check your connection or try again later.",
+    "THE_REQUEST_FROM_WORKERUSERNAME_HAS_BEEN_SUCCESSFU": "The request from {{workerName}} has been successfully declined.",
+    "WE_ENCOUNTERED_AN_ISSUE_WHILE_TRYING_TO_DECLINE_TH": "We encountered an issue while trying to decline the request from {{workerName}}. Please check your connection or try again later.",
     "CANCEL": "Cancel",
     "SUCCESS": "success",
     "ERROR": "error",
     "WORKER": "Worker",
     "WAS_VERIFIED_SUCCESSFULLY": "was verified successfully.",
+    "WORKER_WAS_VERIFIED_SUCCESSFULLY": "Worker {{workerName}} was verified successfully.",
     "SOMETHING_WENT_WRONG_WORKER": "Something went wrong, worker",
     "COULD_NOT_BE_VERIFIED": "could not be verified.",
+    "SOMETHING_WENT_WRONG_WORKER_COULD_NOT": "Something went wrong, worker {{workerName}} could not be verified.",
     "MERGE": "merge"
   },
   "ADMIN-SIDEBAR": {
@@ -400,7 +409,7 @@
     "_RESERVATIONSHIFTSTARTTIME_": "{{\n                  reservation.shift?.startTime\n                }}",
     "END_TIME": "End Time",
     "_RESERVATIONSHIFTENDTIME_": "{{ reservation.shift?.endTime }}",
-    "PAGE__CURRENTPAGE__OF__TOTALPAGES_": "Page {{ currentPage }} of {{ totalPages }}",
+    "PAGE__CURRENTPAGE__OF__TOTALPAGES_": "Page {{currentPage}} of {{totalPages}}",
     "APPAMENITIESRESERVATIONSLIST": "app-amenities-reservations-list",
     "AMENITIESRESERVATIONSLISTCOMPONENTHTML": "./amenities-reservations-list.component.html",
     "RESERVATIONSPAGE": "reservationsPage",
@@ -599,12 +608,12 @@
     "DATE": "Date:",
     "_EVENTEVENTDATE_": "{{ event?.eventDate }}",
     "TIME": "Time:",
-    "FROM__EVENTSTARTTIME__TO__EVENTENDTIME_": "From {{ event?.startTime }} to {{ event?.endTime }}",
+    "FROM__EVENTSTARTTIME__TO__EVENTENDTIME_": "From {{startTime}} to {{endTime}}",
     "DURATION": "Duration:",
-    "_EVENTDURATION__MINUTES": "{{ event?.duration }} Minutes",
+    "_EVENTDURATION__MINUTES": "{{duration}} Minutes",
     "ATTEND": "Attend",
     "UNATTEND": "Unattend",
-    "ATTENDEES__EVENTATTENDEESCOUNT_": "Attendees ({{ event?.attendeesCount }})",
+    "ATTENDEES__EVENTATTENDEESCOUNT_": "Attendees ({{attendeesCount}})",
     "NO_ATTENDEES_HAVE_REGISTERED_FOR_THIS_EVENT_YET": "No attendees have registered for this event yet.",
     "_ATTENDEEUSERNAME___ATTENDEEUSERSURNAME_": "{{ attendee.user.name }} {{ attendee.user.surname }}",
     "ANGULARCORE": "@angular/core",
@@ -624,8 +633,8 @@
     "THERE_ARE_NO_EVENTS_FOR_THIS_DATE": "There are no events for this date.",
     "_EVENTNAME_": "{{ event.name }}",
     "_EVENTSTARTTIME____EVENTENDTIME_": "{{ event.startTime }} - {{ event.endTime }}",
-    "_EVENTDURATION__MINUTES": "{{ event.duration }} Minutes",
-    "_EVENTATTENDEESCOUNT__PEOPLE_WILL_ATTEND": "{{ event.attendeesCount }} People will Attend",
+    "_EVENTDURATION__MINUTES": "{{eventDuration}} Minutes",
+    "_EVENTATTENDEESCOUNT__PEOPLE_WILL_ATTEND": "{{ eventAttendeesCount }} People will Attend",
     "_EVENTDESCRIPTION_": "{{ event.description }}",
     "ANGULARCORE": "@angular/core",
     "COREINDEX": "@core/index",
@@ -721,7 +730,7 @@
     "_SELTAGNAME_": "{{ selTag.name }}",
     "ADD": "Add",
     "_TAGNAME_": "{{ tag.name }}",
-    "PAGE__CURRENTPAGE__OF__TOTALPAGES_": "Page {{ currentPage }} of {{ totalPages }}",
+    "PAGE__CURRENTPAGE__OF__TOTALPAGES_": "Page {{currentPage}} of {{totalPages}}",
     "POST": "Post",
     "ANGULARCORE": "@angular/core",
     "ANGULARFORMS": "@angular/forms",
