--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -222,9 +222,9 @@
     "RESOURCE_DELETED_SUCCESSFULLY": "Resource deleted successfully.",
     "ERROR_DELETING_RESOURCE": "Error deleting resource:",
     "FAILED_TO_DELETE_RESOURCE": "Failed to delete resource.",
-    "CONTACT_NAME" : "Contact Name",
-    "CONTACT_ADDRESS" : "Contact Address",
-    "CONTACT_PHONE" : "Contact Phone"
+    "CONTACT_NAME": "Contact Name",
+    "CONTACT_ADDRESS": "Contact Address",
+    "CONTACT_PHONE": "Contact Phone"
   },
 
   "ADMIN-NEIGHBORS-REQUESTS-PAGE": {
@@ -850,8 +850,8 @@
     "UNIT": "Unit",
     "UNITS": "Units",
     "ASK_A_QUESTION": "Ask a question",
-    "PHONE_NUMBER_EX":"Phone Number (e.g. +54 9 11 1234 5678)",
-    "MESSAGE" : "Message",
+    "PHONE_NUMBER_EX": "Phone Number (e.g. +54 9 11 1234 5678)",
+    "MESSAGE": "Message",
     "YOUR_REPLY": "Your reply..."
   },
   "MARKETPLACE-PRODUCT-EDIT-PAGE": {
@@ -877,8 +877,8 @@
     "LISTING_UPDATED_SUCCESSFULLY": "Listing updated successfully",
     "THERE_WAS_A_PROBLEM_UPDATING_THE_LISTING": "There was a problem updating the listing.",
     "TITTLE": "Title",
-    "MONEY":"$1,000.00",
-    "DESCRIPTION":"Description"
+    "MONEY": "$1,000.00",
+    "DESCRIPTION": "Description"
   },
   "MARKETPLACE-PRODUCT-PREVIEW": {
     "USED": "Used",
@@ -926,8 +926,8 @@
     "THERE_WAS_A_PROBLEM_CREATING_THE_LISTING": "There was a problem creating the listing.",
     "INVALID_PRICE_FORMAT": "Invalid price format.",
     "TITTLE": "Title",
-    "MONEY":"$1,000.00",
-    "DESCRIPTION":"Description"
+    "MONEY": "$1,000.00",
+    "DESCRIPTION": "Description"
   },
   "NOT-FOUND-PAGE": {
     "OOPS__ERRORCODE_": "Oops! {{ errorCode }}",
@@ -1127,7 +1127,14 @@
   },
   "TAGS-FILTER-WIDGET": {
     "TAGS": "Filter by Tags",
-    "PROFESSIONS": "Filter by Profession"
+    "FILTER_BY_PROFESSIONS": "Filter by Profession",
+    "PROFESSIONS": {
+      "PLUMBER": "Plumber",
+      "ELECTRICIAN": "Electrician",
+      "POOL_MAINTENANCE": "Pool Maintenance",
+      "GARDENER": "Gardener",
+      "CARPENTER": "Carpenter"
+    }
   },
   "WAVE-FOOTER": {
     "SLOGAN": "Your peace of mind is our priority. Safe, secure, and serene.",
