fix: minor fix changes

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -840,7 +840,7 @@
     "USED": "Used",
     "NEW": "New",
     "VIEW_LISTING": "View listing",
-    "REQUESTS": "Requests",
+    "REQUESTS": "View requests",
     "PURCHASES_NOT_FOUND": "Purchases not found",
     "QUANTITY": "Quantity",
     "BOUGHT_BY": "Bought by"
