--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -831,7 +831,7 @@
     "USED": "Usado",
     "NEW": "Nuevo",
     "VIEW_LISTING": "Ver publicación",
-    "REQUESTS": "Solicitudes",
+    "REQUESTS": "Ver solicitudes",
     "PURCHASES_NOT_FOUND": "No se encontraron compras",
     "QUANTITY": "Cantidad",
     "BOUGHT_BY": "Comprado por"
